--- a/8.3/Dockerfile
+++ b/8.3/Dockerfile
@@ -4,12 +4,7 @@
 #--------------------------------------------------------------------------
 #
 
-FROM phusion/baseimage:focal-1.0.0
-
-LABEL maintainer="Mahmoud Zalt <mahmoud@zalt.me>"
-
-ENV DEBIAN_FRONTEND=noninteractive
-RUN locale-gen en_US.UTF-8
+FROM ubuntu:22.04
 
 ENV LANGUAGE=en_US.UTF-8
 ENV LC_ALL=en_US.UTF-8
@@ -18,7 +13,8 @@ ENV LANG=en_US.UTF-8
 ENV TERM xterm
 
 RUN set -eux \
-    # Add the "PHP 7" ppa
+    # Add the "PHP 8" ppa
+    && apt-get update \
     && apt-get install -y software-properties-common \
     && add-apt-repository -y ppa:ondrej/php \
     #
@@ -32,31 +28,27 @@ RUN set -eux \
     && apt-get upgrade -y \
     && apt-get install -y --allow-downgrades --allow-remove-essential \
         --allow-change-held-packages \
-        php7.2-cli \
-        php7.2-common \
-        php7.2-curl \
-        php7.2-intl \
-        php7.2-json \
-        php7.2-xml \
-        php7.2-mbstring \
-        php7.2-mysql \
-        php7.2-pgsql \
-        php7.2-sqlite \
-        php7.2-sqlite3 \
-        php7.2-zip \
-        php7.2-bcmath \
-        php7.2-memcached \
-        php7.2-gd \
-        php7.2-dev \
+        php8.3-cli \
+        php8.3-common \
+        php8.3-curl \
+        php8.3-intl \
+        php8.3-xml \
+        php8.3-mbstring \
+        php8.3-mysql \
+        php8.3-pgsql \
+        php8.3-sqlite \
+        php8.3-sqlite3 \
+        php8.3-zip \
+        php8.3-bcmath \
+        php8.3-memcached \
+        php8.3-gd \
+        php8.3-dev \
         pkg-config \
         libcurl4-openssl-dev \
         libedit-dev \
         libssl-dev \
         libxml2-dev \
         xz-utils \
-        libsqlite3-dev \
-        rsync \
-        sqlite3 \
         git \
         curl \
         vim \
@@ -71,3 +63,4 @@ RUN set -eux \
     && curl -s http://getcomposer.org/installer | php \
     && echo "export PATH=${PATH}:/var/www/vendor/bin" >> ~/.bashrc \
     && mv composer.phar /usr/local/bin/composer
+    
