--- a/.github/workflows/dockerpublish.yml
+++ b/.github/workflows/dockerpublish.yml
@@ -1,21 +1,15 @@
-name: Docker Image CI
+name: Push Image
 
 on:
   push:
-    branches: '**'
-    tags: '**'
-  pull_request:
-    branches:
-      - 'master'
-  schedule:
-  - cron: 0 0 * * 6
+    branches: ['main']
 
 jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php_version: ["5.6", "7.0", "7.1", "7.2", "7.3", "7.4", "8.0", "8.1", "8.2", "8.3"]
+        php_version: ["7.4", "8.0", "8.1", "8.2", "8.3"]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -25,7 +19,7 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images:
-            laradock/workspace
+            garrett9/app-ignition-php-workspace
           flavor: |
             suffix=-${{ matrix.php_version }}
           tags: |
@@ -42,16 +36,16 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Login to Docker Hub
-        if: ${{ (github.repository == 'laradock/workspace') && (github.ref == 'refs/heads/master') }}
-        uses: docker/login-action@v2
+        if: ${{ (github.repository == 'garrett9/app-ignition-php-workspace') && (github.ref == 'refs/heads/main') }}
+        uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_HUB_USER }}
-          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
-          file: Dockerfile-${{ matrix.php_version }}
+          file: ${{ matrix.php_version }}/Dockerfile
           platforms: linux/amd64,linux/arm64,linux/386
-          push: ${{ (github.repository == 'laradock/workspace') && (github.ref == 'refs/heads/master') }}
+          push: ${{ (github.repository == 'garrett9/app-ignition-php-workspace') && (github.ref == 'refs/heads/main') }}
           tags: ${{ steps.meta.outputs.tags }}
