--- a/8.3/Dockerfile
+++ b/8.3/Dockerfile
@@ -6,6 +6,8 @@
 
 FROM ubuntu:22.04
 
+ENV DEBIAN_FRONTEND=noninteractive
+
 ENV LANGUAGE=en_US.UTF-8
 ENV LC_ALL=en_US.UTF-8
 ENV LC_CTYPE=en_US.UTF-8
