--- a/.github/workflows/build-cotnainers.yml
+++ b/.github/workflows/build-cotnainers.yml
@@ -11,12 +11,13 @@ permissions:
 
 jobs:
   build-other:
-    runs-on: ['ubuntu-latest', 'windows-latest', 'macos-latest']
+    runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
         version: ['7.4', '8.0', '8.1', '8.2', '8.3']
         architecture: [ "linux/amd64", "linux/arm64" ]
+        os: [ubuntu-latest, windows-latest, macos-latest]
     steps:
       - uses: actions/checkout@v4
       - uses: docker/setup-qemu-action@v3
