--- a/.github/workflows/build-cotnainers.yml
+++ b/.github/workflows/build-cotnainers.yml
@@ -34,7 +34,7 @@ jobs:
         if: matrix.os == 'macos-latest'
         run: |
           brew install docker
-          brew install buildx
+          brew install docker-buildx
 
       - uses: docker/setup-qemu-action@v3
         if: matrix.os == 'ubuntu-latest'
