--- a/.github/workflows/build-cotnainers.yml
+++ b/.github/workflows/build-cotnainers.yml
@@ -31,10 +31,7 @@ jobs:
       - name: Install Docker (macOS)
         if: matrix.os == 'macos-latest'
         run: |
-          brew install docker
-          brew install docker-buildx
-          mkdir -p ~/.docker/cli-plugins
-          ln -sfn /usr/local/opt/docker-buildx/bin/docker-buildx ~/.docker/cli-plugins/docker-buildx
+          brew install --cask docker
 
       - uses: docker/setup-qemu-action@v3
         if: matrix.os == 'ubuntu-latest'
