--- a/.github/workflows/build-cotnainers.yml
+++ b/.github/workflows/build-cotnainers.yml
@@ -32,6 +32,9 @@ jobs:
         if: matrix.os == 'macos-latest'
         run: |
           brew install --cask docker
+          brew install docker-buildx
+          mkdir -p ~/.docker/cli-plugins
+          ln -sfn /usr/local/opt/docker-buildx/bin/docker-buildx ~/.docker/cli-plugins/docker-buildx
 
       - uses: docker/setup-qemu-action@v3
         if: matrix.os == 'ubuntu-latest'
