--- a/.github/workflows/build-cotnainers.yml
+++ b/.github/workflows/build-cotnainers.yml
@@ -17,7 +17,7 @@ jobs:
       matrix:
         version: ['7.4', '8.0', '8.1', '8.2', '8.3']
         architecture: [ "linux/amd64", "linux/arm64" ]
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [windows-latest]
     steps:
       - uses: actions/checkout@v4
 
@@ -28,7 +28,6 @@ jobs:
           # Wait for Docker to start
           Start-Sleep -s 120
           choco install docker-cli -y
-          docker buildx install
 
       - name: Install Docker (macOS)
         if: matrix.os == 'macos-latest'
@@ -41,10 +40,20 @@ jobs:
 
       - uses: docker/setup-qemu-action@v3
         if: matrix.os == 'ubuntu-latest'
+
       - name: Build the Docker image
+        if: matrix.os == 'ubuntu-latest'
         env:
           DOCKER_DEFAULT_PLATFORM: ${{ matrix.architecture }}
         run: |
           docker buildx build -f ./${{ matrix.version }}/Dockerfile .
+
+      - name: Build the Docker image for Windows
+        if: matrix.os == 'windows-latest'
+        env:
+          DOCKER_DEFAULT_PLATFORM: ${{ matrix.architecture }}
+        run: |
+          docker build ./${{ matrix.version }}/Dockerfile
+
       - name: List Images
         run: docker image inspect --format "{{.ID}} {{.RepoTags}} {{.Architecture}}" $(docker image ls -q)
