--- a/.github/workflows/build-cotnainers.yml
+++ b/.github/workflows/build-cotnainers.yml
@@ -17,25 +17,25 @@ jobs:
       matrix:
         version: ['7.4', '8.0', '8.1', '8.2', '8.3']
         architecture: [ "linux/amd64", "linux/arm64" ]
-        os: [windows-latest]
+        os: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install Docker (Windows)
-        if: matrix.os == 'windows-latest'
-        run: |
-          choco install docker-desktop -y
-          # Wait for Docker to start
-          Start-Sleep -s 120
+      # - name: Install Docker (Windows)
+      #   if: matrix.os == 'windows-latest'
+      #   run: |
+      #     choco install docker-desktop -y
+      #     # Wait for Docker to start
+      #     Start-Sleep -s 120
 
-      - name: Install Docker (macOS)
-        if: matrix.os == 'macos-latest'
-        run: |
-          brew install docker
-          colima start
-          brew install docker-buildx
-          mkdir -p ~/.docker/cli-plugins
-          ln -sfn /usr/local/opt/docker-buildx/bin/docker-buildx ~/.docker/cli-plugins/docker-buildx
+      # - name: Install Docker (macOS)
+      #   if: matrix.os == 'macos-latest'
+      #   run: |
+      #     brew install docker
+      #     colima start
+      #     brew install docker-buildx
+      #     mkdir -p ~/.docker/cli-plugins
+      #     ln -sfn /usr/local/opt/docker-buildx/bin/docker-buildx ~/.docker/cli-plugins/docker-buildx
 
       - uses: docker/setup-qemu-action@v3
         if: matrix.os == 'ubuntu-latest'
