--- a/.github/workflows/build-cotnainers.yml
+++ b/.github/workflows/build-cotnainers.yml
@@ -21,13 +21,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # - name: Install Docker (Windows)
-      #   if: matrix.os == 'windows-latest'
-      #   run: |
-      #     choco install docker-desktop -y
-      #     # Wait for Docker to start
-      #     Start-Sleep -s 120
-
+      #   To test building on a Mac, uncomment the following.
       # - name: Install Docker (macOS)
       #   if: matrix.os == 'macos-latest'
       #   run: |
