--- a/.github/workflows/dockerpublish.yml
+++ b/.github/workflows/dockerpublish.yml
@@ -47,4 +47,4 @@ jobs:
           push: true
           file: ${{ matrix.php_version }}/Dockerfile
           platforms: linux/amd64,linux/arm64
-          tags: appignition/app-ignition-php-workspace:${{ github.event.release.tag_name }}
+          tags: ${{ steps.meta.outputs.tags }}
